# 2027-North-America-New-Grad-Jobs

./: README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: google-jobs-daily.yml  update-jobs.yml
config/: manual_jobs.yml  preferences.yml  sources.yml
data/: google_jobs_status.json  job_qualification_cache.json  jobs.csv  jobs.json  posted_dates.json
docs/: index.html
scripts/: bigtech_discovery.py  extra_discovery.py  order_jobs.py  qualify_jobs.py  update_jobs.py
src/ng_jobs/: filters.py  models.py
