[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "north-america-2027-new-grad-jobs"
version = "0.1.0"
description = "Automated collector for 2027 North America new-grad full-time jobs"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "PyYAML>=6.0,<7",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
